--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,7 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    compile group: 'log4j', name: 'log4j', version: '1.2.16'
 }
 
