--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     
     compile group: 'log4j', name: 'log4j', version: '1.2.16'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
+    
 }
 
